Thu Dec 04 12:05:10 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/t0016.c: fixed make distcheck
	* src/tds/token.c: fix for raiserror statement

Wed Dec 03 11:41:45 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: support for emulated prepare under TDS 4.2

Wed Dec 03 11:01:46 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/config.c: remove libgen dependency

Wed Dec 03 10:34:12 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/odbc/Makefile.am:
	- ODBC driver do not require ODBC DM library
	* src/odbc/unittests/raiseerror.c: more verbose

Wed Dec  3 03:33:01 EST 2003	JK Lowden <jklowden@schemamania.org>
	* doc/tsql.txt updated and clarified (I hope)
	* doc/userguide.sgml applied Freddy's modified patch and more
	* src/tds/config.c bad entries written to stderr
	
Wed Dec 03 08:12:49 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/Makefile.am src/tds/encodings.h:
	* src/tds/sybase_character_sets.h:
	* src/tds/sybase_character_sets.h.pl:
	- fix make on snapshot

Tue Dec 02 18:40:08 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/character_sets.h src/tds/encodings.h:
	- updated tables for ISO-2022-* charsets

Mon Dec 01 08:34:27 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/tables.sql src/odbc/Makefile.am:
	- removed tables.sql

Sun Nov 30 14:23:10 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/.cvsignore src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/preperror.c(added):
	- added a test from Nathaniel Talbott issue
	* src/tds/token.c: fixed core

Sun Nov 30 13:42:05 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/Makefile.am src/tds/encodings.h:
	- updated encodings.h
	- added a charset target to make to update encodings.h

Sun Nov 30 13:00:17 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h include/tds.h src/ctlib/cs.c:
	* src/ctlib/ct.c src/tds/convert.c src/tds/token.c: