@@ -1,3 +1,6 @@
+Thu Dec 04 23:03:12 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/tds/token.c: make "make check" happy even for Sybase
+
 Thu Dec 04 12:05:10 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* src/dblib/unittests/t0016.c: fixed make distcheck
 	* src/tds/token.c: fix for raiserror statement
